--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </style>
 </head>
 <body>
-  <h1>Bienvenido a mi web</h1>
+  <h1>Bienvenido a BlueBird servicios</h1>
   <p>En mantenimiento, nos vemos pronto.</p>
 </body>
 </html>
