--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <style>
     body { font-family: sans-serif; background-color: #f8f8f8; text-align: center; padding: 50px; }
+         { img.logo { max-width: 200px; margin-bottom: 30px; }
   </style>
 </head>
 <body>
