--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </style>
 </head>
 <body>
+  <img src="img/log.png" alt="Logo de Blueberry" class="logo">
   <h1>Bienvenido a BlueBird servicios</h1>
   <p>En mantenimiento, nos vemos pronto.</p>
 </body>
