--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <img src="img/log.png" alt="Logo de Blueberry" class="logo">
-  <h1>Bienvenido a BlueBird servicios</h1>
+  <h1>BlueBird Comunicación</h1>
   <p>En mantenimiento, nos vemos pronto.</p>
 </body>
 </html>
