--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
 <head>
-  <title>Mi sitio web</title>
+  <title>Blueberry</title>
   <meta charset="UTF-8">
   <style>
-    body { font-family: sans-serif; background-color: #f8f8f8; text-align: center; padding: 50px; }
-         { img.logo { max-width: 200px; margin-bottom: 30px; }
+    body {
+      font-family: sans-serif;
+      background-color: #f8f8f8;
+      text-align: center;
+      padding: 50px;
+    }
+
+    img.logo {
+      max-width: 200px;
+      margin-bottom: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
   </style>
 </head>
 <body>
   <img src="img/log.png" alt="Logo de Blueberry" class="logo">
-  <h1>BlueBird Comunicación</h1>
+  <h1>BlueBerry Comunicación</h1>
   <p>En mantenimiento, nos vemos pronto.</p>
 </body>
 </html>
