--- a/index.html
+++ b/index.html
@@ -56,14 +56,21 @@
     }
 
     /* Responsive para móviles */
-    @media (max-width: 400px) {
-      .texto h1 {
-        font-size: 2rem;
-      }
-      .texto p {
-        font-size: 1rem;
-      }
-    }
+@media (max-width: 600px) {
+  body {
+    background-size: contain; /* Ajusta la imagen para que se muestre completa */
+    background-position: center top; /* Posiciona el foco en la parte superior */
+    background-repeat: no-repeat;
+  }
+
+  .texto h1 {
+    font-size: 1.8rem;
+  }
+
+  .texto p {
+    font-size: 1rem;
+  }
+}
   </style>
 </head>
 <body>
