--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>BlueBird Comunicación</title>
+  <title>BlueBerry</title>
   <style>
     /* Reset y estilos base */
     * {
@@ -76,7 +76,7 @@
 </head>
 <body>
   <div class="texto">
-    <h1>BlueBird Comunicación</h1>
+    <h1>BlueBerry Comunicación</h1>
     <p>En mantenimiento, nos vemos pronto.</p>
   </div>
 </body>
