--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     /* Responsive para móviles */
     @media (max-width: 600px) {
       body {
-        background-image: url('img/log-mobile.png'); /* Imagen optimizada */
+        background-image: url('img/log-mobile-2.png'); /* Imagen optimizada */
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
