--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BlueBerry</title>
   <style>
     /* Reset y estilos base */
@@ -57,11 +57,10 @@
     }
 
     /* Responsive para móviles */
-    @media (max-width: 900px) {
+    @media (max-width: 700px) {
       body {
         background-image: url ('img/log-mobile-2.png'); /* Imagen optimizada */
-        background-color: red;
-        background-size: cover;
+        background-size: auto;
         background-position: center center;
         background-repeat: no-repeat;
       }
