--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     /* Responsive para móviles */
     @media (max-width: 700px) {
       body {
-        background-image: url ('img/log-mobile-2.png'); /* Imagen optimizada */
-        background-size: auto;
+        background-image: url ('img/log-mobile2.png'); /* Imagen optimizada */
+        background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
       }
