--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     /* Responsive para móviles */
     @media (max-width: 700px) {
       body {
-        background-image: url ('img/log-mobile2.png'); /* Imagen optimizada */
+        background-image: url ('img/logo.png'); /* Imagen optimizada */
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
