--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
 
     /* Capa oscura para mejorar contraste */
     body::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
-      z-index: 0;
+    display: none;
     }
 
     /* Contenedor del texto */
