--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     }
 
     /* Responsive para móviles */
-    @media (max-width: 700px) {
+    @media (max-width: 600px) {
       body {
         background-image: url('img/logo.png'); /* Imagen optimizada */
-        background-size: cover;
+        background-size: contain;
         background-position: center center;
         background-repeat: no-repeat;
       }
