--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     }
 
     /* Responsive para móviles */
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
       body {
-        background-image: url('img/logo.png'); /* Imagen optimizada */
+        background-image: url('img/log-mobile2.png'); /* Imagen optimizada */
         background-size: contain;
         background-position: center center;
         background-repeat: no-repeat;
