--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     /* Responsive para móviles */
     @media (max-width: 768px) {
       body {
-        background-image: url('img/log-mobile2.png'); /* Imagen optimizada */
+        background-image: url('img/log-mobile.png'); /* Imagen optimizada */
         background-size: contain;
         background-position: center center;
         background-repeat: no-repeat;
