--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
   <div class="texto">
-    <h1>En mantenimiento, nos vemos pronto.</h1>
+    <p>En mantenimiento, nos vemos pronto.</p>
   </div>
 </body>
 </html>
